syntax = "proto3";
option go_package = "github.com/metaprov/modeld/services/publisherd";


package github.com.metaprov.modeld.services.publisherd;


import "github.com/metaprov/modeld-api/pkg/apis/training/v1alpha1/generated.proto";
import "github.com/metaprov/modeld-api/pkg/apis/data/v1alpha1/generated.proto";
import "github.com/metaprov/modeld-api/pkg/apis/infra/v1alpha1/generated.proto";

message PublishNotebookRequest {
    string notebookName = 1;
    string notebookNamespace = 2;
    github.com.metaprov.modeld.pkg.apis.training.v1alpha1.NotebookSpec notebookSpec            = 3;
    string   NotebookContent     = 4;
    string   Dockerfile          = 5;
    string   provider            = 6;  // the image registry provider
    map<string,bytes>  secret    = 7;  // the image registry login details
}

message PublishNotebookResponse {
    string ImageName     = 1;
}

message PublishModelRequest {
    string dataproductName = 1;
    string dataproductNamespace = 2;
    github.com.metaprov.modeld.pkg.apis.data.v1alpha1.DataProductSpec    dataproductSpec    = 3;
    string dataproductversionName = 4;
    string dataproductversionNamespace = 5;
    github.com.metaprov.modeld.pkg.apis.data.v1alpha1.DataProductVersionSpec    dataproductversionSpec    = 6;
    string modelName = 7;
    string modelNamespace = 8;
    github.com.metaprov.modeld.pkg.apis.training.v1alpha1.ModelSpec      modelSpec    = 9;
    string studyName = 13;
    string studyNamespace = 14;
    github.com.metaprov.modeld.pkg.apis.training.v1alpha1.StudySpec      studySpec    = 15;
    string datasourceName = 16;
    string datasourceNamespace = 17;
    github.com.metaprov.modeld.pkg.apis.data.v1alpha1.DataSourceSpec         datasourceSpec   = 18;
    string datasetName = 19;
    string datasetNamespace = 20;
    github.com.metaprov.modeld.pkg.apis.data.v1alpha1.DatasetSpec         datasetSpec   = 21;
    string   provider            = 22; // the image registry provider
    string   imagename           = 23;
    bool     push                = 24;
    string bucketName            = 25;
    string bucketNamespace       = 26;
    github.com.metaprov.modeld.pkg.apis.infra.v1alpha1.VirtualBucketSpec         bucketSpec   = 27;
    string cloudConnectionName = 28;
    string cloudsConnectionNamespace = 29;
    github.com.metaprov.modeld.pkg.apis.infra.v1alpha1.ConnectionSpec         cloudConnectionSpec   = 30;
    map<string,bytes>  cloudSecret   = 31; // the image registry login details.
    string dockerConnectionName = 32;
    string dockerConnectionNamespace = 33;
    github.com.metaprov.modeld.pkg.apis.infra.v1alpha1.ConnectionSpec         dockerConnectionSpec   = 34;
    map<string,bytes>  dockerRegistrySecret    = 35; // the image registry login details.
    string    modelWeightsUri        = 36;
    string    preprocessorWeightsUri = 37;
    string    labelEncoderUri        = 38;
    bool      kaniko                 = 39;
}

message PublishModelResponse {
    string ImageName     = 1;
}

message ShutdownRequest {}
message ShutdownResponse {}

service PublisherdService {
    rpc PublishCombined(PublishModelRequest) returns (PublishModelResponse) {}

    // Publish a notebook.
    rpc PublishNotebook(PublishNotebookRequest) returns (PublishNotebookResponse) {}

    rpc Shutdown(ShutdownRequest) returns (ShutdownResponse) {}
}


